update tab title

--- a/public/404.html
+++ b/public/404.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 
 <head>
-  <title>404 Page not found | codex</title>
+  <title>404 Page not found | r4fun</title>
 
   <meta charset="UTF-8">
   <meta name="language" content="en">
