--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
     <h1>r4fun<span class="fancy">.</span></h1>
     
     <h2>
-      Building R stuff for fun.
+      Building R stuff for fun 🎉
     </h2>
     
 
