--- a/public/404.html
+++ b/public/404.html
@@ -47,7 +47,7 @@
     { 
       "@context": "http://schema.org", 
       "@type": "WebSite", 
-      "url": "\/404.html",
+      "url": "https:\/\/r4fun.dev\/404.html",
       "name": "404 Page not found",
       "author": {
         "@type": "Person",
@@ -57,6 +57,17 @@
     }
   
   </script>
+
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+	ga('create', 'UA-135464357-3', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
 </head>
 
 <body>
